[gd_scene load_steps=3 format=2]

[ext_resource path="res://content/gui/menus/GameMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=4]

[node name="GameMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -384.0
margin_top = -682.5
margin_right = 384.0
margin_bottom = 682.5
mouse_filter = 2
color = Color( 0.257813, 0.257813, 0.257813, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 150
alignment = 1

[node name="ContinueButton" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 728.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Fortsetzen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigButton" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 459.0
margin_right = 728.0
margin_bottom = 587.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Konfiguration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartmenuButton" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 737.0
margin_right = 728.0
margin_bottom = 865.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Hauptmen√º"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 1015.0
margin_right = 728.0
margin_bottom = 1143.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Spiel beenden"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/ConfigButton" to="." method="_on_ConfigButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/StartmenuButton" to="." method="_on_StartmenuButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
